welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:40: error: illegal start of simple expression
} 
^